--- a/sushi_Site/index.html
+++ b/sushi_Site/index.html
@@ -1,74 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Tinos:wght@400;700&display=swap"
-        rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Tinos:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restouran</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="header">
-        <div class="container">
-            <div class="header-line">
-                <div class="header-logo">
-                    <img src="LOGO.png" alt="">
-                </div>
-                <div class="nav">
-                    <a class="nav-item" href="">Главная</a>
-                    <a class="nav-item" href="">Меню</a>
-                    <a class="nav-item" href="">О нас</a>
-                    <a class="nav-item nav-item-last" href="">Забронировать</a>
-                </div>
-                <div class="cart">
-                    <a href="">
-                        <img src="cart.png" class="cart-img" alt="">
-                    </a>
-                </div>
-                <div class="phone">
-                    <div class="phone-holder">
-                        <div class="phone-img">
-                            <img src="phone.png" alt="">
-                        </div>
-                        <div class="number"><a class="num" href="#">+999-888-76-54</a></div>
-                    </div>
-                    <div class="phone-text">Свяжитесь с нами <br>для
-                        бронирования</div>
-                </div>
-                <div class="btn">
-                    <a class="button" href="">Заказ столика</a>
-                </div>
+      <div class="container">
+        <div class="header-line">
+          <div class="header-logo">
+            <img src="LOGO.png" alt="" />
+          </div>
+          <div class="nav">
+            <a class="nav-item" href="">Главная</a>
+            <a class="nav-item" href="">Меню</a>
+            <a class="nav-item" href="">О нас</a>
+            <a class="nav-item nav-item-last" href="">Забронировать</a>
+          </div>
+          <div class="cart">
+            <a href="">
+              <img src="cart.png" class="cart-img" alt="" />
+            </a>
+          </div>
+          <div class="phone">
+            <div class="phone-holder">
+              <div class="phone-img">
+                <img src="phone.png" alt="" />
+              </div>
+              <div class="number">
+                <a class="num" href="#">+999-888-76-54</a>
+              </div>
             </div>
-            <div class="header-down">
-                <div class="header-title">Добро пожаловать в
-                    <div class="header-subtitle">Наш ресторан</div>
-                    <div class="header-suptitle">Дом лучшей еды</div>
-                    <div class="header-btn">
-                        <a class="header-button" href="">Посмотреть меню</a>
-                    </div>
-                </div>
+            <div class="phone-text">
+              Свяжитесь с нами <br />для бронирования
             </div>
+          </div>
+          <div class="btn">
+            <a class="button" href="">Заказ столика</a>
+          </div>
         </div>
+        <div class="header-down">
+          <div class="header-title">
+            Добро пожаловать в
+            <div class="header-subtitle">Наш ресторан</div>
+            <div class="header-suptitle">Дом лучшей еды</div>
+            <div class="header-btn">
+              <a class="header-button" href="">Посмотреть меню</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="cards">
-        <div class="card">
+      <div class="container">
+        <div class="cards-holder">
+          <div class="card">
             <div class="card-image">
-                <img class="card-img" src="card.png" alt="">
+              <img class="card-img" src="card.png" alt="" />
             </div>
+            <div class="card-title">Магическая <span>Атмосфера</span></div>
+            <div class="card-desc">
+              В нашем заведении царит магическая атмосфера наполненная вкусными
+              ароматами
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <img class="card-img" src="card.png" alt="" />
+            </div>
+            <div class="card-title">Лучшее качество <span>Еды</span></div>
+            <div class="card-desc">
+              В нашем заведении царит магическая атмосфера наполненная вкусными
+              ароматами
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <img class="card-img" src="card.png" alt="" />
+            </div>
+            <div class="card-title">Недорогая <span>Еда</span></div>
+            <div class="card-desc">
+              В нашем заведении царит магическая атмосфера наполненная вкусными
+              ароматами
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-
-</body>
-
+  </body>
 </html>
