--- a/sushi_Site/index.html
+++ b/sushi_Site/index.html
@@ -103,20 +103,42 @@
     <div class="history">
       <div class="container">
         <div class="history-holder">
-        <div class="history-wrapper">
-          <div class="history-title">Наша <span>История</span></div>
-          <div class="histry-desc">
-            Как и у любого другого самобытного места, у нас есть своя, особая
-            история. Идея ресторана пришла основателям неожиданно. Во время
-            прогулки по лесу создатель нашего ресторана застрял в сотнях
-            километров от ближайшего населенного пункта. Вдали от цивилизации и
-            связи им пришлось навремя обустровать себе нехитрый быт, добывать и
-            готовить себе еду.
+          <div class="history-wrapper">
+            <div class="history-title">Наша <span>История</span></div>
+            <div class="histry-desc">
+              Как и у любого другого самобытного места, у нас есть своя, особая
+              история. Идея ресторана пришла основателям неожиданно. Во время
+              прогулки по лесу создатель нашего ресторана застрял в сотнях
+              километров от ближайшего населенного пункта. Вдали от цивилизации
+              и связи им пришлось навремя обустровать себе нехитрый быт,
+              добывать и готовить себе еду.
+            </div>
+            <div class="history-number">
+              <div class="number-item">93 <span>Напитки</span></div>
+              <div class="number-item">206 <span>Еда</span></div>
+              <div class="number-item">71 <span>Закуски</span></div>
+            </div>
           </div>
-          <div class="history-number">
-            <div class="number-item">93 <span>Напитки</span></div>
-            <div class="number-item">206 <span>Еда</span></div>
-            <div class="number-item">71 <span>Закуски</span></div>
+          <div class="history-images">
+            <img class="imgages-1" src="1.png" alt="" />
+            <img class="imgages-2" src="2.png" alt="" />
+            <img class="imgages-3" src="3.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="black-block">
+      <div class="container">
+        <div class="block-holder">
+        <div class="left">
+          <div class="left-title">
+            Отпразднуйте в одном из <br> самых лучших ресторанов.
+          </div>
+          <div class="left-text">Только в этом месяце бизнес-ланч от 250 ₽</div>
+        </div>
+        <div class="right">
+          <div class="right-button">
+            <a href="" class="right-btn">Заказ столика</a>
           </div>
         </div>
       </div>
