--- a/sushi_Site/index.html
+++ b/sushi_Site/index.html
@@ -144,5 +144,31 @@
       </div>
       </div>
     </div>
+
+
+    <div class="dishes">
+      <div class="container">
+        <div class="dishes-title">Наши <span>блюда</span></div>
+          <div class="burgers">
+            <div class="burger-image">
+              <img src="pizza.png" alt="" class="pizza">
+            </div>
+            <div class="burger-items">
+              <div class="burger-item">
+                <img src="burger.png" alt="" class="burger">
+                <div class="burger-text">Гамбургер мини -------- 220 ₽</div>
+              </div>
+              <div class="burger-item">
+                <img src="burger.png" alt="" class="burger">
+                <div class="burger-text">Гамбургер мини -------- 220 ₽</div>
+              </div>
+              <div class="burger-item">
+                <img src="burger.png" alt="" class="burger">
+                <div class="burger-text">Гамбургер мини -------- 220 ₽</div>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
   </body>
 </html>
