--- a/sushi_Site/index.html
+++ b/sushi_Site/index.html
@@ -130,44 +130,46 @@
     <div class="black-block">
       <div class="container">
         <div class="block-holder">
-        <div class="left">
-          <div class="left-title">
-            Отпразднуйте в одном из <br> самых лучших ресторанов.
+          <div class="left">
+            <div class="left-title">
+              Отпразднуйте в одном из <br />
+              самых лучших ресторанов.
+            </div>
+            <div class="left-text">
+              Только в этом месяце бизнес-ланч от 250 ₽
+            </div>
           </div>
-          <div class="left-text">Только в этом месяце бизнес-ланч от 250 ₽</div>
-        </div>
-        <div class="right">
-          <div class="right-button">
-            <a href="" class="right-btn">Заказ столика</a>
+          <div class="right">
+            <div class="right-button">
+              <a href="" class="right-btn">Заказ столика</a>
+            </div>
           </div>
         </div>
-      </div>
       </div>
     </div>
-
 
     <div class="dishes">
       <div class="container">
         <div class="dishes-title">Наши <span>блюда</span></div>
-          <div class="burgers">
-            <div class="burger-image">
-              <img src="pizza.png" alt="" class="pizza">
+        <div class="burgers">
+          <div class="burger-image">
+            <img src="pizza.png" alt="" class="pizza" />
+          </div>
+          <div class="burger-items">
+            <div class="burger-item">
+              <img src="burger.png" alt="" class="burger" />
+              <div class="burger-text">Гамбургер мини -------- 220 ₽</div>
             </div>
-            <div class="burger-items">
-              <div class="burger-item">
-                <img src="burger.png" alt="" class="burger">
-                <div class="burger-text">Гамбургер мини -------- 220 ₽</div>
-              </div>
-              <div class="burger-item">
-                <img src="burger.png" alt="" class="burger">
-                <div class="burger-text">Гамбургер мини -------- 220 ₽</div>
-              </div>
-              <div class="burger-item">
-                <img src="burger.png" alt="" class="burger">
-                <div class="burger-text">Гамбургер мини -------- 220 ₽</div>
-              </div>
+            <div class="burger-item">
+              <img src="burger.png" alt="" class="burger" />
+              <div class="burger-text">Гамбургер мини -------- 220 ₽</div>
+            </div>
+            <div class="burger-item">
+              <img src="burger.png" alt="" class="burger" />
+              <div class="burger-text">Гамбургер мини -------- 220 ₽</div>
             </div>
           </div>
+        </div>
       </div>
     </div>
   </body>
