--- a/sushi_Site/index.html
+++ b/sushi_Site/index.html
@@ -15,6 +15,12 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Tinos:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cookie&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restouran</title>
   </head>
@@ -172,5 +178,110 @@
         </div>
       </div>
     </div>
+
+    <div class="menu">
+      <div class="container">
+        <div class="menu-title">Наше меню</div>
+        <div class="menu-items">
+          <div class="menu-item">
+            <div class="reccommended-wrapper">
+              <div class="recommended">Рекоммендуем</div>
+            </div>
+            <div class="menu-image">
+              <img src="menu-item.png" alt="" class="menu-img" />
+              <div class="price">
+                <img src="price.png" alt="" class="price-img" />
+                <div class="price-420">420</div>
+              </div>
+            </div>
+            <div class="menu-text">Гамбургер макси</div>
+            <div class="menu-subtext">
+              Максимально толстый <br />
+              слой мяса
+            </div>
+            <div class="menu-button">
+              <a class="menu-btn" href="">ЗАКАЗАТЬ</a>
+            </div>
+          </div>
+          <div class="menu-item">
+            <div class="menu-image">
+              <img src="menu-item.png" alt="" class="menu-img" />
+              <div class="price">
+                <img src="price.png" alt="" class="price-img" />
+                <div class="price-420">420</div>
+              </div>
+            </div>
+            <div class="menu-text">Гамбургер макси</div>
+            <div class="menu-subtext">
+              Максимально толстый <br />
+              слой мяса
+            </div>
+            <div class="menu-button">
+              <a class="menu-btn" href="">ЗАКАЗАТЬ</a>
+            </div>
+          </div>
+          <div class="menu-item">
+            <div class="menu-image">
+              <img src="menu-item.png" alt="" class="menu-img" />
+              <div class="price">
+                <img src="price.png" alt="" class="price-img" />
+                <div class="price-420">420</div>
+              </div>
+            </div>
+            <div class="menu-text">Гамбургер макси</div>
+            <div class="menu-subtext">
+              Максимально толстый <br />
+              слой мяса
+            </div>
+            <div class="menu-button">
+              <a class="menu-btn" href="">ЗАКАЗАТЬ</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="gray-block">
+      <div class="container">
+        <div class="guest-text">
+          Я надолго запомню мой День рождения, проведённый в этом ресторане!
+          Кусочек родной <br />
+          Армении!!! Отдельное спасибо за комплепент в виде фруктовой тарелки.
+          Будем <br />
+          рекомендовать этот ресторан своим друзьям и родственникам также за
+          рубежом, <br />
+          путешествующих в Санкт-Петербург!!!
+        </div>
+        <div class="guest-image">
+          <img src="guest.png" alt="" class="guest-img" />
+        </div>
+        <div class="guest-who">Посетитель</div>
+        <div class="guest-name">Николай</div>
+      </div>
+    </div>
+
+    <div class="galerry-of-dishes">
+      <div class="container">
+        <div class="dishes-title-with-images">Галерея <span>Блюд</span></div>
+        <div class="image-content">
+          <img src="table1.png" alt="" class="table1-1" />
+          <img src="table2.png" alt="" class="table1-2" />
+          <img src="table3.png" alt="" class="table1-3" />
+        </div>
+        <div class="image-content">
+          <img src="table2.png" alt="" class="table2-1" />
+          <img src="table3.png" alt="" class="table2-2" />
+          <img src="table1.png" alt="" class="table2-3" />
+        </div>
+
+        <div class="our-cooks">Наши <span>Повара</span></div>
+        <div class="our-cooks-images">
+          <img src="cook1.png" alt="" class="cook1" />
+          <img src="cook2.png" alt="" class="cook2" />
+          <img src="cook3.png" alt="" class="cook3" />
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">copyright 2023</div>
   </body>
 </html>
