--- a/sushi_Site/index.html
+++ b/sushi_Site/index.html
@@ -240,9 +240,9 @@
         </div>
       </div>
     </div>
-    <div class="gray-block">
+    <div class="comment">
       <div class="container">
-        <div class="guest-text">
+        <div class="comment-text">
           Я надолго запомню мой День рождения, проведённый в этом ресторане!
           Кусочек родной <br />
           Армении!!! Отдельное спасибо за комплепент в виде фруктовой тарелки.
@@ -251,33 +251,47 @@
           рубежом, <br />
           путешествующих в Санкт-Петербург!!!
         </div>
-        <div class="guest-image">
-          <img src="guest.png" alt="" class="guest-img" />
+        <div class="comment-image">
+          <img src="guest.png" alt="" class="comment-img" />
         </div>
-        <div class="guest-who">Посетитель</div>
-        <div class="guest-name">Николай</div>
+        <div class="comment-type">Посетитель</div>
+        <div class="comment-name">Николай</div>
       </div>
     </div>
 
-    <div class="galerry-of-dishes">
+    <div class="galery">
       <div class="container">
-        <div class="dishes-title-with-images">Галерея <span>Блюд</span></div>
-        <div class="image-content">
-          <img src="table1.png" alt="" class="table1-1" />
-          <img src="table2.png" alt="" class="table1-2" />
-          <img src="table3.png" alt="" class="table1-3" />
-        </div>
-        <div class="image-content">
-          <img src="table2.png" alt="" class="table2-1" />
-          <img src="table3.png" alt="" class="table2-2" />
-          <img src="table1.png" alt="" class="table2-3" />
-        </div>
+        <div class="galery-title">Галерея <span>Блюд</span></div>
 
-        <div class="our-cooks">Наши <span>Повара</span></div>
-        <div class="our-cooks-images">
-          <img src="cook1.png" alt="" class="cook1" />
-          <img src="cook2.png" alt="" class="cook2" />
-          <img src="cook3.png" alt="" class="cook3" />
+        <div class="galery-content">
+          <div class="galery-left">
+            <div class="galery-up">
+              <img src="table1.png" alt="" />
+            </div>
+            <div class="galery-down">
+              <img src="table2.png" alt="" />
+              <img src="table3.png" alt="" />
+            </div>
+          </div>
+          <div class="galery-right">
+            <div class="galery-up">
+              <img src="table2.png" alt="" />
+              <img src="table3.png" alt="" />
+            </div>
+            <div class="galery-down">
+              <img src="table1.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="cook">
+      <div class="container">
+        <div class="cook-title">Наши <span>Повара</span></div>
+        <div class="cook-content">
+          <img src="cook1.png" alt="" />
+          <img src="cook2.png" alt="" />
+          <img src="cook3.png" alt="" />
         </div>
       </div>
     </div>
