--- a/sushi_Site/index.html
+++ b/sushi_Site/index.html
@@ -266,20 +266,20 @@
         <div class="galery-content">
           <div class="galery-left">
             <div class="galery-up">
-              <img src="table1.png" alt="" />
+              <img class="img-gal" src="table1.png" alt="" />
             </div>
             <div class="galery-down">
-              <img src="table2.png" alt="" />
-              <img src="table3.png" alt="" />
+              <img class="img-gal" src="table2.png" alt="" />
+              <img class="img-gal" src="table3.png" alt="" />
             </div>
           </div>
           <div class="galery-right">
             <div class="galery-up">
-              <img src="table2.png" alt="" />
-              <img src="table3.png" alt="" />
+              <img class="img-gal" src="table2.png" alt="" />
+              <img class="img-gal" src="table3.png" alt="" />
             </div>
             <div class="galery-down">
-              <img src="table1.png" alt="" />
+              <img class="img-gal" src="table1.png" alt="" />
             </div>
           </div>
         </div>
@@ -289,9 +289,9 @@
       <div class="container">
         <div class="cook-title">Наши <span>Повара</span></div>
         <div class="cook-content">
-          <img src="cook1.png" alt="" />
-          <img src="cook2.png" alt="" />
-          <img src="cook3.png" alt="" />
+          <img class="cook-img" src="cook1.png" alt="" />
+          <img class="cook-img" src="cook2.png" alt="" />
+          <img class="cook-img" src="cook3.png" alt="" />
         </div>
       </div>
     </div>
