--- a/sushi_Site/index.html
+++ b/sushi_Site/index.html
@@ -59,7 +59,13 @@
           <div class="btn">
             <a class="button" href="">Заказ столика</a>
           </div>
+          <div class="burger-menu">
+            <a href="">
+              <img src="burger-img.png" alt="" />
+            </a>
+          </div>
         </div>
+
         <div class="header-down">
           <div class="header-title">
             Добро пожаловать в
@@ -86,11 +92,11 @@
               ароматами
             </div>
           </div>
-          <div class="card">
+          <div class="card card-food">
             <div class="card-image">
               <img class="card-img" src="card.png" alt="" />
             </div>
-            <div class="card-title">Лучшее качество <span>Еды</span></div>
+            <div class="card-title food">Лучшее качество<span>Еды</span></div>
             <div class="card-desc">Качество нашей Еды - отменное!</div>
           </div>
           <div class="card">
@@ -240,6 +246,58 @@
         </div>
       </div>
     </div>
+
+    <!--Mobile-->
+    <div class="menu-mob">
+      <div class="container">
+        <div class="menu-title1">Наше меню</div>
+        <div class="menu-items1">
+          <div class="menu-item1">
+            <div class="reccommended-wrapper1">
+              <div class="recommended1">Рекоммендуем</div>
+            </div>
+            <div class="menu-image1">
+              <img src="burger-i.png" alt="" class="menu-img1" />
+            </div>
+            <div class="menu-text1">Гамбургер макси</div>
+            <div class="menu-subtext1">
+              Максимально толстый <br />
+              слой мяса
+            </div>
+            <div class="menu-button1">
+              <a class="menu-btn1" href="">ЗАКАЗАТЬ</a>
+            </div>
+          </div>
+          <div class="menu-item1">
+            <div class="menu-image1">
+              <img src="burger-i.png" alt="" class="menu-img1" />
+            </div>
+            <div class="menu-text1">Гамбургер макси</div>
+            <div class="menu-subtext1">
+              Максимально толстый <br />
+              слой мяса
+            </div>
+            <div class="menu-button1">
+              <a class="menu-btn1" href="">ЗАКАЗАТЬ</a>
+            </div>
+          </div>
+          <div class="menu-item1">
+            <div class="menu-image1">
+              <img src="burger-i.png" alt="" class="menu-img1" />
+            </div>
+            <div class="menu-text1">Гамбургер макси</div>
+            <div class="menu-subtext1">
+              Максимально толстый <br />
+              слой мяса
+            </div>
+            <div class="menu-button1">
+              <a class="menu-btn1" href="">ЗАКАЗАТЬ</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="comment">
       <div class="container">
         <div class="comment-text">
@@ -266,7 +324,7 @@
         <div class="galery-content">
           <div class="galery-left">
             <div class="galery-up">
-              <img class="img-gal" src="table1.png" alt="" />
+              <img class="img-gal large-img" src="table1.png" alt="" />
             </div>
             <div class="galery-down">
               <img class="img-gal" src="table2.png" alt="" />
@@ -279,7 +337,7 @@
               <img class="img-gal" src="table3.png" alt="" />
             </div>
             <div class="galery-down">
-              <img class="img-gal" src="table1.png" alt="" />
+              <img class="img-gal large-img" src="table1.png" alt="" />
             </div>
           </div>
         </div>
