dropped menu is addprived for mobile

--- a/sushi_Site/index.html
+++ b/sushi_Site/index.html
@@ -60,10 +60,10 @@
           </button>
 
           <div id="menu" class="burger-slide disp">
-            <a class="nav-item block" href="">Главная</a>
-            <a class="nav-item block" href="">Меню</a>
-            <a class="nav-item block" href="">О нас</a>
-            <a class="nav-item nav-item-last block" href="">Забронировать</a>
+            <a class="nav-item-mob block" href="">Главная</a>
+            <a class="nav-item-mob block" href="">Меню</a>
+            <a class="nav-item-mob block" href="">О нас</a>
+            <a class="nav-item-mob block" href="">Забронировать</a>
           </div>
         </div>
       </div>
